# practical-networked-applications

./: .gitignore  README.md
building-blocks/: Cargo.toml
building-blocks/bb-2/: Cargo.toml
building-blocks/bb-2/output/: exercise-1.json  exercise-3.json
building-blocks/bb-2/src/: lib.rs
project-1/: Cargo.toml
project-1/src/: lib.rs
project-1/tests/: tests.rs
project-2/: Cargo.toml
project-2/src/: args.rs  frame.rs  kv_store.rs  lib.rs
project-2/tests/: tests.rs
projects/: Cargo.toml
projects/project-1/: Cargo.toml
projects/project-1/src/: kv_store.rs  lib.rs  main.rs
projects/project-1/tests/: tests.rs
projects/project-2/: Cargo.toml
projects/project-2/src/: cli.rs  errors.rs  kv_store.rs  lib.rs  log.rs  main.rs  utils.rs
projects/project-2/tests/: tests.rs
