[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bincode = "1.3.3"
clap = { version = "4.3.8", features = ["derive"] }
serde = { version = "1.0.164", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"
tempfile = "3.6.0"
walkdir = "2.3.3"
