[package]
name = "bb-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bson = "2.9.0"
fake = { version = "2.9.2", features = ["derive"] }
ron = "0.8.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
