[package]
name = "project-2"
version = "0.1.0"
description = "A key/value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bincode = "1.3.3"
clap = { version = "4.4", features = ["derive"] }
regex = "1.10.3"
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.56"

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1.0"
tempfile = "3.0"
walkdir = "2.2"
